--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,19 @@ html, body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
-    background-color: #6889b4;
     color: #000;
     transition: background-color 0.3s, color 0.3s;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
+    background: url('./images/light-background.webp') no-repeat center center fixed;
+    background-size: cover;
 }
 
+
 html.dark-mode, body.dark-mode {
-    background-color: #121212;
+    background: url('./images/background.png') no-repeat center center fixed;
+    background-size: cover;
     color: #ffffff;
 }
 
@@ -145,9 +148,6 @@ nav {
 /* laptop specific styles */
 
 @media (min-width: 769px) {
-    .menu-toggle {
-        display: none;
-    }
     .media-section {
         display: flex;
         justify-content: space-between;
@@ -363,6 +363,7 @@ section,
 .modal-content {
     border-radius: 10px;
 }
+
 
 main.dark-mode {
     background-color: #121212;
